--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="https://quinez.github.io/trashff/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="//quinez.github.io/trashff/themes/casper/assets/css/screen.css?v=1486451691820" />
+    <link rel="stylesheet" type="text/css" href="//quinez.github.io/trashff/themes/casper/assets/css/screen.css?v=1486451938291" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     <link rel="canonical" href="https://quinez.github.io/trashff/" />
@@ -47,7 +47,7 @@ null
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">Trash FF</h1>
-            <h2 class="page-description">Trash fanfiction/stories writen by almost literal trash</h2>
+            <h2 class="page-description">Trash fanfiction/stories written by almost literal trash</h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
@@ -106,8 +106,8 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script type="text/javascript" src="//quinez.github.io/trashff/themes/casper/assets/js/jquery.fitvids.js?v=1486451691820"></script>
-    <script type="text/javascript" src="//quinez.github.io/trashff/themes/casper/assets/js/index.js?v=1486451691820"></script>
+    <script type="text/javascript" src="//quinez.github.io/trashff/themes/casper/assets/js/jquery.fitvids.js?v=1486451938291"></script>
+    <script type="text/javascript" src="//quinez.github.io/trashff/themes/casper/assets/js/index.js?v=1486451938291"></script>
 
 </body>
 </html>
